[package]
name = "blazehttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.57"
async-channel = "1.6.1"
crossbeam = "0.8.1"
h2 = { version = "0.3.13", features = ["stream"] }
http = "0.2.7"
httparse = "1.7.1"
nom = "7.1.1"
num_cpus = "1.13.1"
once_cell = "1.11.0"
parking_lot = "0.12.0"
pin-project-lite = "0.2.9"
regex = "1.5.6"
ron = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full", "time"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dev-dependencies]
tokio-test = "0.4.2"
